# pyfSolver

./: .pre-commit-config.yaml  README.md  meson.build  pyproject.toml
.github/workflows/: CI.yml
src/pyfsolver/: __main__.py  blas.py  cli.py  coo.py  solver.py  timer.py
src/pyfsolver/fortran/: blas.py  solver.py
src/pyfsolver/lib/: blas.f90  pcg.f90
src/pyfsolver/numpy/: blas.py  solver.py
tests/: _test_blas.py  test_blas.py  test_cli.py  test_read_coo.py  test_solver.py  test_timer.py
tests/coo_files/: sist3.mtx  sist3_b.mtx
tests/fortran/: test_blas.py  test_matvec.f90  test_solver.f90  test_solver.py
tests/numpy/: test_blas.py  test_solver.py
tests/pyfortran/: test_blas.py  test_solver.py
